--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,5 @@
 # Auto detect text files and perform LF normalization
 * text=auto
+# Ignorar carpetas de versiones de WoW
+WoW Classic** linguist-vendored
+WoW Classic Era** linguist-vendored
