--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -40,9 +40,13 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
       
+      - name: Move addon to root for packager
+        run: |
+          cp -r Alpha/${{ matrix.addon }}/* .
+          ls -la
+      
       - name: Package and upload to CurseForge
         uses: BigWigsMods/packager@v2
-        working-directory: Alpha/${{ matrix.addon }}
         with:
           args: -g alpha
         env:
