--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -39,20 +39,11 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-        with:
-          path: repo
-      
-      - name: Prepare addon files
-        run: |
-          mkdir -p addon
-          cp -r repo/Alpha/${{ matrix.addon }}/* addon/
-          cd addon
-          ls -la
       
       - name: Package and upload to CurseForge
         uses: BigWigsMods/packager@v2
         with:
-          args: -g 11.0.5 -t addon
+          args: -g 11.0.5 -t Alpha/${{ matrix.addon }}
         env:
           CF_API_KEY: ${{ secrets.CF_API_KEY }}
           GITHUB_OAUTH: ${{ secrets.GITHUB_TOKEN }}
