--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -20,23 +20,13 @@ jobs:
         run: |
           addons="[]"
           for dir in Alpha/*/; do
-            if [ -f "$dir/.pkgmc" ]; then
+            if [ -f "$dir/.pkgmeta" ]; then
               addon_name=$(basename "$dir")
-
-              # Detectar el TOC
-              TOC_FILE=$(ls "$dir"/*.toc | head -n 1)
-              TOC_NAME=$(basename "$TOC_FILE" .toc)
-
-              # Añadir package-as si no existe o es diferente
-              if ! grep -q '"package-as"' "$dir/.pkgmc"; then
-                echo "{\"package-as\": \"$TOC_NAME\"}" > "$dir/.pkgmc"
-                echo "Added package-as=$TOC_NAME to $dir/.pkgmc"
-              fi
-
               addons=$(echo "$addons" | jq -c ". += [\"$addon_name\"]")
-              echo "Found addon: $addon_name"
             fi
           done
+
+        
           echo "All addons: $addons"
           echo "addons=$addons" >> $GITHUB_OUTPUT
 
@@ -57,10 +47,9 @@ jobs:
         run: |
           echo "Packaging addon: ${{ matrix.addon }}"
           TEMP_DIR=$(mktemp -d)
-          # Copiar la carpeta completa
           cp -r Alpha/${{ matrix.addon }} "$TEMP_DIR/"
           cd "$TEMP_DIR/${{ matrix.addon }}"
-          ls -la  # debug para confirmar que .pkgmc y .toc están presentes
+          ls -la  # debug para verificar .toc y .pkgmeta
 
       - name: Package and upload to CurseForge
         uses: BigWigsMods/packager@v2
