--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -24,17 +24,6 @@ jobs:
           for dir in Alpha/*/; do
             if [ -f "$dir/.pkgmeta" ]; then
               addon_name=$(basename "$dir")
-              
-              # Detectar TOC
-              TOC_FILE=$(ls "$dir"/*.toc | head -n 1)
-              TOC_NAME=$(basename "$TOC_FILE" .toc)
-
-              # Asegurar package-as
-              if ! grep -q '"package-as"' "$dir/.pkgmeta"; then
-                echo "{\"package-as\": \"$TOC_NAME\"}" > "$dir/.pkgmeta"
-                echo "Added package-as=$TOC_NAME to $dir/.pkgmeta"
-              fi
-
               addons=$(echo "$addons" | jq -c ". += [\"$addon_name\"]")
               echo "Found Alpha addon: $addon_name"
             fi
@@ -49,17 +38,6 @@ jobs:
           for dir in Beta/*/; do
             if [ -f "$dir/.pkgmeta" ]; then
               addon_name=$(basename "$dir")
-              
-              # Detectar TOC
-              TOC_FILE=$(ls "$dir"/*.toc | head -n 1)
-              TOC_NAME=$(basename "$TOC_FILE" .toc)
-
-              # Asegurar package-as
-              if ! grep -q '"package-as"' "$dir/.pkgmeta"; then
-                echo "{\"package-as\": \"$TOC_NAME\"}" > "$dir/.pkgmeta"
-                echo "Added package-as=$TOC_NAME to $dir/.pkgmeta"
-              fi
-
               addons=$(echo "$addons" | jq -c ". += [\"$addon_name\"]")
               echo "Found Beta addon: $addon_name"
             fi
@@ -87,8 +65,7 @@ jobs:
           cp Alpha/${{ matrix.addon }}/*.lua "$TEMP_DIR/"
           cp Alpha/${{ matrix.addon }}/*.xml "$TEMP_DIR/" 2>/dev/null || true
           cd "$TEMP_DIR"
-          ls -la  # verificar que toc y pkgmeta estén en la raíz
-
+          ls -la  # Verificar que toc y pkgmeta estén en la raíz
 
       - name: Package and upload Alpha addon
         uses: BigWigsMods/packager@v2
@@ -120,7 +97,7 @@ jobs:
           cp Beta/${{ matrix.addon }}/*.xml "$TEMP_DIR/" 2>/dev/null || true
           cp Beta/${{ matrix.addon }}/*.txt "$TEMP_DIR/" 2>/dev/null || true
           cd "$TEMP_DIR"
-          ls -la
+          ls -la  # Verificar que toc y pkgmeta estén en la raíz
 
       - name: Package and upload Beta addon
         uses: BigWigsMods/packager@v2
