--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -57,19 +57,16 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Prepare Alpha addon for packaging
-        run: |
-          TEMP_DIR=$(mktemp -d)
-          cp -r Alpha/${{ matrix.addon }}/. "$TEMP_DIR/"
-          cd "$TEMP_DIR"
-          ls -la
-          echo "ADDON_PATH=$TEMP_DIR" >> $GITHUB_ENV
-
       - name: Package and upload Alpha addon
+        run: |
+          cd Alpha/${{ matrix.addon }}
+          ls -la
+        shell: bash
+
+      - name: Run BigWigs Packager
         uses: BigWigsMods/packager@v2
         with:
-          args: -g 11.0.5
-          working-directory: ${{ env.ADDON_PATH }}
+          args: -d Alpha/${{ matrix.addon }} -g 11.0.5
         env:
           CF_API_KEY: ${{ secrets.CF_API_KEY }}
           GITHUB_OAUTH: ${{ secrets.GITHUB_TOKEN }}
@@ -87,19 +84,16 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Prepare Beta addon for packaging
-        run: |
-          TEMP_DIR=$(mktemp -d)
-          cp -r Beta/${{ matrix.addon }}/. "$TEMP_DIR/"
-          cd "$TEMP_DIR"
-          ls -la
-          echo "ADDON_PATH=$TEMP_DIR" >> $GITHUB_ENV
-
       - name: Package and upload Beta addon
+        run: |
+          cd Beta/${{ matrix.addon }}
+          ls -la
+        shell: bash
+
+      - name: Run BigWigs Packager
         uses: BigWigsMods/packager@v2
         with:
-          args: -g 11.0.5
-          working-directory: ${{ env.ADDON_PATH }}
+          args: -d Beta/${{ matrix.addon }} -g 11.0.5
         env:
           CF_API_KEY: ${{ secrets.CF_API_KEY }}
           GITHUB_OAUTH: ${{ secrets.GITHUB_TOKEN }}
